// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default ProgressCircle 1`] = `
<div
  className="ola_score is-error"
>
  <strong
    className="ola_score-value"
  >
    0
    <sup
      className="is-gray-light"
    >
      .0
    </sup>
  </strong>
  <svg
    className="ola_score-circle"
    height="180"
    viewBox="0 0 180 180"
    width="180"
  >
    <circle
      className="ola_score-circle-background is-gray-xlight"
      cx="90"
      cy="90"
      r="86"
    />
    <circle
      className="ola_score-circle-value"
      cx="90"
      cy="90"
      r="86"
      style={
        Object {
          "strokeDashoffset": 540.3539364174444,
        }
      }
    />
  </svg>
</div>
`;

exports[`ProgressCircle Busy 1`] = `
<div
  className="ola_score is-error is-busy"
>
  <svg
    className="ola_score-circle"
    height="180"
    viewBox="0 0 180 180"
    width="180"
  >
    <circle
      className="ola_score-circle-background is-gray-xlight"
      cx="90"
      cy="90"
      r="86"
    />
    <circle
      className="ola_score-circle-value"
      cx="90"
      cy="90"
      r="86"
      style={
        Object {
          "strokeDashoffset": 540.3539364174444,
        }
      }
    />
  </svg>
</div>
`;

exports[`ProgressCircle Busy with content 1`] = `
<div
  className="ola_score is-error is-busy"
>
  <span
    className="ola_score-busy"
  >
    Checking ...
  </span>
  <svg
    className="ola_score-circle"
    height="180"
    viewBox="0 0 180 180"
    width="180"
  >
    <circle
      className="ola_score-circle-background is-gray-xlight"
      cx="90"
      cy="90"
      r="86"
    />
    <circle
      className="ola_score-circle-value"
      cx="90"
      cy="90"
      r="86"
      style={
        Object {
          "strokeDashoffset": 540.3539364174444,
        }
      }
    />
  </svg>
</div>
`;

exports[`ProgressCircle with error variant 1`] = `
<div
  className="ola_score is-error"
  variant="error"
>
  <strong
    className="ola_score-value"
  >
    0
    <sup
      className="is-gray-light"
    >
      .0
    </sup>
  </strong>
  <svg
    className="ola_score-circle"
    height="180"
    viewBox="0 0 180 180"
    width="180"
  >
    <circle
      className="ola_score-circle-background is-gray-xlight"
      cx="90"
      cy="90"
      r="86"
    />
    <circle
      className="ola_score-circle-value"
      cx="90"
      cy="90"
      r="86"
      style={
        Object {
          "strokeDashoffset": 540.3539364174444,
        }
      }
    />
  </svg>
</div>
`;

exports[`ProgressCircle with extraClass 1`] = `
<div
  className="ola_score is-error test"
>
  <strong
    className="ola_score-value"
  >
    0
    <sup
      className="is-gray-light"
    >
      .0
    </sup>
  </strong>
  <svg
    className="ola_score-circle"
    height="180"
    viewBox="0 0 180 180"
    width="180"
  >
    <circle
      className="ola_score-circle-background is-gray-xlight"
      cx="90"
      cy="90"
      r="86"
    />
    <circle
      className="ola_score-circle-value"
      cx="90"
      cy="90"
      r="86"
      style={
        Object {
          "strokeDashoffset": 540.3539364174444,
        }
      }
    />
  </svg>
</div>
`;

exports[`ProgressCircle with label and value 1`] = `
<div
  className="ola_score is-warning"
  label="Your score"
>
  <strong
    className="ola_score-value"
  >
    75
    <sup
      className="is-gray-light"
    >
      %
    </sup>
  </strong>
  <svg
    className="ola_score-circle"
    height="180"
    viewBox="0 0 180 180"
    width="180"
  >
    <circle
      className="ola_score-circle-background is-gray-xlight"
      cx="90"
      cy="90"
      r="86"
    />
    <circle
      className="ola_score-circle-value"
      cx="90"
      cy="90"
      r="86"
      style={
        Object {
          "strokeDashoffset": 135.0884841043611,
        }
      }
    />
  </svg>
</div>
`;

exports[`ProgressCircle with success variant 1`] = `
<div
  className="ola_score is-error"
  variant="success"
>
  <strong
    className="ola_score-value"
  >
    0
    <sup
      className="is-gray-light"
    >
      .0
    </sup>
  </strong>
  <svg
    className="ola_score-circle"
    height="180"
    viewBox="0 0 180 180"
    width="180"
  >
    <circle
      className="ola_score-circle-background is-gray-xlight"
      cx="90"
      cy="90"
      r="86"
    />
    <circle
      className="ola_score-circle-value"
      cx="90"
      cy="90"
      r="86"
      style={
        Object {
          "strokeDashoffset": 540.3539364174444,
        }
      }
    />
  </svg>
</div>
`;

exports[`ProgressCircle with value 1`] = `
<div
  className="ola_score is-error"
>
  <strong
    className="ola_score-value"
  >
    20
    <sup
      className="is-gray-light"
    >
      %
    </sup>
  </strong>
  <svg
    className="ola_score-circle"
    height="180"
    viewBox="0 0 180 180"
    width="180"
  >
    <circle
      className="ola_score-circle-background is-gray-xlight"
      cx="90"
      cy="90"
      r="86"
    />
    <circle
      className="ola_score-circle-value"
      cx="90"
      cy="90"
      r="86"
      style={
        Object {
          "strokeDashoffset": 432.28314913395553,
        }
      }
    />
  </svg>
</div>
`;

exports[`ProgressCircle with warning variant 1`] = `
<div
  className="ola_score is-error"
  variant="warning"
>
  <strong
    className="ola_score-value"
  >
    0
    <sup
      className="is-gray-light"
    >
      .0
    </sup>
  </strong>
  <svg
    className="ola_score-circle"
    height="180"
    viewBox="0 0 180 180"
    width="180"
  >
    <circle
      className="ola_score-circle-background is-gray-xlight"
      cx="90"
      cy="90"
      r="86"
    />
    <circle
      className="ola_score-circle-value"
      cx="90"
      cy="90"
      r="86"
      style={
        Object {
          "strokeDashoffset": 540.3539364174444,
        }
      }
    />
  </svg>
</div>
`;
